--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
+        "barryvdh/laravel-ide-helper": "^2.15",
+        "doctrine/dbal": "^3.9",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.13",
         "laravel/pint": "^1.0",
