--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/breeze": "^1.13",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.0.1",
+        "mmo/faker-images": "^0.9.0",
         "mockery/mockery": "^1.4.4",
         "nunomaduro/collision": "^6.1",
         "phpunit/phpunit": "^9.5.10",
